--- a/angular.json
+++ b/angular.json
@@ -30,6 +30,7 @@
               "src/assets"
             ],
             "styles": [
+              "@angular/material/prebuilt-themes/pink-bluegrey.css",
               "node_modules/bootstrap-icons/font/bootstrap-icons.scss",
               "node_modules/bootstrap/scss/bootstrap.scss",
               "src/styles.scss"
@@ -101,6 +102,7 @@
               "src/assets"
             ],
             "styles": [
+              "@angular/material/prebuilt-themes/pink-bluegrey.css",
               "node_modules/bootstrap-icons/font/bootstrap-icons.scss",
               "node_modules/bootstrap/scss/bootstrap.scss",
               "src/styles.scss"
