ng build changes

--- a/angular.json
+++ b/angular.json
@@ -45,7 +45,7 @@
               "budgets": [
                 {
                   "type": "initial",
-                  "maximumWarning": "600kb",
+                  "maximumWarning": "1.5mb",
                   "maximumError": "1.5mb"
                 },
                 {
